--- a/web_static/0-index.html
+++ b/web_static/0-index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8" />
-		<title>AirBnB clone</title>
+		<title>AirBnB Clone</title>
 	</head>
 	<body style="padding: 0; margin: 0">
 		<header
