--- a/web_static/5-index.html
+++ b/web_static/5-index.html
@@ -2,15 +2,17 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8" />
+		<title>AirBnB Clone</title>
 		<link rel="stylesheet" href="styles/4-common.css" />
 		<link rel="stylesheet" href="styles/3-header.css" />
 		<link rel="stylesheet" href="styles/3-footer.css" />
-		<link rel="stylesheet" href="styles/5-filters.css" />
+		<link rel="stylesheet" href="styles/6-filters.css" />
 		<link rel="icon" href="images/icon.png" type="image/png" />
-		<title>AirBnB Clone</title>
 	</head>
 	<body>
-		<header></header>
+		<header>
+			<div class="logo"></div>
+		</header>
 		<div class="container">
 			<section class="filters">
 				<div class="locations">
